rstsr-kml-ffi/src/kblas/ffi_extern.rs

    pub fn cblas_ctrmm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_ztrmm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_strsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: f32,
        A: *const f32,
        lda: blas_int,
        B: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_dtrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        B: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_ctrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_ztrsm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *mut c_void,
        ldb: blas_int,
    );
    pub fn cblas_chemm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: *const c_void,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zhemm(
        Order: CBLAS_ORDER,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: *const c_void,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_cherk(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: f32,
        A: *const c_void,
        lda: blas_int,
        beta: f32,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zherk(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: f64,
        A: *const c_void,
        lda: blas_int,
        beta: f64,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_cher2k(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: f32,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_zher2k(
        Order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: blas_int,
        K: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        B: *const c_void,
        ldb: blas_int,
        beta: f64,
        C: *mut c_void,
        ldc: blas_int,
    );
    pub fn cblas_xerbla(p: blas_int, rout: *const c_char, form: *const c_char, ...);
    pub fn cblas_saxpby(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incX: blas_int,
        beta: f32,
        y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_daxpby(
        n: blas_int,
        alpha: f64,
        x: *const f64,
        incX: blas_int,
        beta: f64,
        y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_caxpby(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zaxpby(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incY: blas_int,
    );
}
